--- a/styles/listar-tarefas.css
+++ b/styles/listar-tarefas.css
@@ -74,6 +74,21 @@ button {
     cursor: pointer;
 }
 
+.btn-edit {
+    background-color: #1900ff;
+    /* Red */
+    border: none;
+    border-radius: 5px;
+    color: white;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
 .btn-list {
     top: 60px;
     left: 10%;
